--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -5,7 +5,7 @@ name: Deploy package
 on:
   # Triggers the workflow on pull request event but only for the master branch
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -47,9 +47,9 @@ jobs:
         run: |
           sudo npm install sfdx-git-delta@latest -g
           git fetch --all
-          git --no-pager diff --name-status $SOURCE_BRANCH origin/master
+          git --no-pager diff --name-status $SOURCE_BRANCH origin/main
           mkdir changed-sources
-          sgd --to $SOURCE_BRANCH --from origin/master --repo . --output changed-sources/ --generate-delta
+          sgd --to $SOURCE_BRANCH --from origin/main --repo . --output changed-sources/ --generate-delta
           cat changed-sources/package/package.xml
           
       - uses: actions/upload-artifact@v2
