--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -40,6 +40,7 @@ jobs:
           sudo npm install sfdx-git-delta@latest -g
           git fetch --all
           git --no-pager diff --name-status HEAD HEAD^
+          echo git --no-pager diff --name-status HEAD HEAD^
           mkdir changed-sources
           sgd --to HEAD --from HEAD^ --output changed-sources/ --generate-delta
           cat changed-sources/package/package.xml
