--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -33,20 +33,29 @@ jobs:
       - uses: sfdx-actions/setup-sfdx@v1
         with:
           sfdx-auth-url: ${{ secrets.AUTH_SECRET }}
+
+      - name: Branches Involved
+        env:
+          SOURCE_BRANCH: ${{ toJSON(github.head_ref) }}
+          TARGET_BRANCH: ${{ toJSON(github.base_ref) }}
+        run: |
+          echo "$SOURCE_BRANCH"
+          echo "$TARGET_BRANCH"    
             
       # sudo npm install sfdx-git-delta@latest -g  
       - name: Install App and Create Delta
         run: |
           sudo npm install sfdx-git-delta@latest -g
           git fetch --all
-          mkdir changed
-          git --no-pager diff --name-status HEAD HEAD^ --output changed
+          git --no-pager diff --name-status HEAD HEAD^
+          mkdir changed-sources
+          sgd --to HEAD --from HEAD^ --output changed-sources/ --generate-delta
           cat changed-sources/package/package.xml
           
       - uses: actions/upload-artifact@v2
         with:
           name: package check uploaded
-          path: changed/    
+          path: changed-sources/    
           
       - name: Convert Metadata
         run: sfdx force:source:convert --manifest=changed-sources/package/package.xml --outputdir=convert
