--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           sudo npm install sfdx-git-delta@latest -g
           git fetch --all
+          git checkout main
           git --no-pager diff --name-status HEAD HEAD^
           mkdir changed-sources
           sgd --to HEAD --from HEAD^ --output changed-sources/ --generate-delta
