--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install App and Create Delta
         run: |
           sudo npm install sfdx-git-delta@latest -g
+          git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
           git fetch --all
           git --no-pager diff --name-status HEAD HEAD^
           mkdir changed-sources
