--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -46,8 +46,12 @@ jobs:
       - name: Install App and Create Delta
         run: |
           sudo npm install sfdx-git-delta@latest -g
+          git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
           git fetch --all
-          git --no-pager diff --name-status HEAD HEAD^
+          git --no-pager diff --name-status HEAD HEAD~1
+          mkdir changed-sources
+          sgd --to HEAD --from HEAD~1 --output changed-sources/ --generate-delta
+          cat changed-sources/package/package.xml
           
       - uses: actions/upload-artifact@v2
         with:
