--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -48,9 +48,9 @@ jobs:
           sudo npm install sfdx-git-delta@latest -g
           git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
           git fetch --all
-          git --no-pager diff --name-status HEAD HEAD~1
+          git --no-pager diff --name-status HEAD 25657139ad07b11d464c7064b333df0d23c7fd17
           mkdir changed-sources
-          sgd --to HEAD --from HEAD~1 --output changed-sources/ --generate-delta
+          sgd --to HEAD --from 25657139ad07b11d464c7064b333df0d23c7fd17 --output changed-sources/ --generate-delta
           cat changed-sources/package/package.xml
           
       - uses: actions/upload-artifact@v2
