--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Install App and Create Delta
         run: |
           sudo npm install sfdx-git-delta@latest -g
-          git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
           git fetch --all
+          git status
           git --no-pager diff --name-status HEAD HEAD^
           mkdir changed-sources
           sgd --to HEAD --from HEAD^ --output changed-sources/ --generate-delta
