--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -5,7 +5,7 @@ name: Deploy package
 on:
   # Triggers the workflow on pull request event but only for the master branch
   push:
-    branches: [ main, dev ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
