--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -5,8 +5,10 @@ name: Deploy package
 on:
   # Triggers the workflow on pull request event but only for the master branch
   pull_request:
-    branches: [ main ]
-    types: [ closed ]
+    branches:
+      -main
+    types:
+      -closed
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
