--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -6,8 +6,7 @@ on:
   # Triggers the workflow on pull request event but only for the master branch
   pull_request:
     types: [closed]
-    branches:
-      - main
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
