--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -40,6 +40,21 @@ jobs:
         run: |
           echo "$SOURCE_BRANCH"
           echo "$TARGET_BRANCH"
+      
+      - name: Get current time
+        uses: 1466587594/get-current-time@v2
+        id: current-time
+        with:
+          format: YYYYMMDD-HH
+          utcOffset: "+08:00"
+      - name: Use current time
+        env:
+          TIME: "${{ steps.current-time.outputs.time }}"
+          R_TIME: "${{ steps.current-time.outputs.readableTime }}"
+          F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
+          YEAR: "${{ steps.current-time.outputs.year }}"
+          DAY: "${{ steps.current-time.outputs.day }}"
+        run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
             
       # sudo npm install sfdx-git-delta@latest -g  
       - name: Install App and Create Delta
@@ -53,7 +68,7 @@ jobs:
           
       - uses: actions/upload-artifact@v2
         with:
-          name: package check uploaded
+          name: package check uploaded $TIME $R_TIME $F_TIME $YEAR $DAY
           path: changed-sources/    
           
       - name: Convert Metadata
