--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -70,7 +70,7 @@ jobs:
           
       - uses: actions/upload-artifact@v2
         with:
-          name: package check uploaded from ${{ github.head_ref }} to ${{ github.base_ref }} by ${{ github.actor }} ${{ steps.current-time.outputs.day }} - ${{ steps.current-time.outputs.month }} - ${{ steps.current-time.outputs.year }}
+          name: package check uploaded from ${{ github.head_ref }} to ${{ github.base_ref }} by ${{ github.actor }} ${{ steps.current-time.outputs.day }} - ${{ steps.current-time.outputs.month }} - ${{ steps.current-time.outputs.year }} ${{ steps.current-time.outputs.hour }}  ${{ steps.current-time.outputs.minutes }}
           
           path: changed-sources/    
           
