--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -57,6 +57,11 @@ jobs:
           YEAR: "${{ steps.current-time.outputs.year }}"
           DAY: "${{ steps.current-time.outputs.day }}"
         run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
+      
+      - name: Set current date as env variable
+        run: echo "NOW::$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
+      - name: Echo current date
+        run: echo $NOW
             
       # sudo npm install sfdx-git-delta@latest -g  
       - name: Install App and Create Delta
