--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -41,37 +41,14 @@ jobs:
         run: |
           echo "$SOURCE_BRANCH"
           echo "$TARGET_BRANCH"
-           echo "$USER"
-      
-      - name: Get current time
-        uses: 1466587594/get-current-time@v2
-        id: current-time
-        with:
-          format: YYYYMMDD-HH
-          utcOffset: "+08:00"
-      - name: Use current time
-        env:
-          TIME: "${{ steps.current-time.outputs.time }}"
-          R_TIME: "${{ steps.current-time.outputs.readableTime }}"
-          F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
-          YEAR: "${{ steps.current-time.outputs.year }}"
-          DAY: "${{ steps.current-time.outputs.day }}"
-        run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
-        
-      - name: Get current time apagar
-        uses: gerred/actions/current-time@master
-        id: current-time2
-      - name: Use current time
-        env:
-          TIME: "${{ steps.current-time.outputs.time }}"
-        run: echo $TIME  
+          echo "$USER"
         
       - name: Get Time novo
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
           timeZone: 0
-          format: 'YYYY-MM-DD-HH-mm-ss'
+          format: 'YYYY-MM-DD HH-mm-ss'
       - name: Usage
         env:
           TIME: "${{ steps.time.outputs.time }}"
