--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -48,7 +48,7 @@ jobs:
         uses: nanzm/get-time-action@v1.1
         with:
           timeZone: 0
-          format: 'YYYY-MM-DD HH-mm-ss'
+          format: 'DD-MM-YYYY HH:mm:ss'
       - name: Usage
         env:
           TIME: "${{ steps.time.outputs.time }}"
