--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -43,7 +43,7 @@ jobs:
           echo "$TARGET_BRANCH"
           echo "$USER"
         
-      - name: Get Time novo
+      - name: Get Time
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
