--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -44,6 +44,7 @@ jobs:
           echo "$SOURCE_BRANCH"
           echo "$TARGET_BRANCH"
           echo "$USER"
+          echo "$PREVIOUS_COMMIT"
           
       - name: Get Time
         id: time
