--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -68,9 +68,9 @@ jobs:
         run: |
           sudo npm install sfdx-git-delta@latest -g
           git fetch --all
-          git --no-pager diff --name-status HEAD $PREVIOUS_COMMIT
+          git --no-pager diff --name-status ${{ github.event.before }} ${{ github.sha }}
           mkdir changed-sources
-          sgd --to HEAD --from $PREVIOUS_COMMIT --repo . --output changed-sources/ --generate-delta
+          sgd --to ${{ github.sha }} --from ${{ github.event.before }} --repo . --output changed-sources/ --generate-delta
           cat changed-sources/package/package.xml
           
       - uses: actions/upload-artifact@v2
