--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -31,7 +31,10 @@ jobs:
           
       # Authorize ouserlves, the server key was decrypted by the previous step
       - name: 'Authorize'
-        run: sfdx force:auth:jwt:grant --clientid=${{secrets.CONSUMER_KEY}} --username=${{secrets.USERNAME}} --jwtkeyfile assets/server.key --setdefaultdevhubusername --setalias=OW_DevPoc
+        run: |
+          sfdx force:auth:jwt:grant --clientid=${{secrets.CONSUMER_KEY}} --username=${{secrets.USERNAME}} --jwtkeyfile assets/server.key --setdefaultdevhubusername --setalias=OW_DevPoc
+          echo ${{secrets.CONSUMER_KEY}}
+          echo ${{secrets.USERNAME}}
           
       - name: Branches Involved
         env:
