--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -33,8 +33,8 @@ jobs:
       - name: 'Authorize'
         run: |
           sfdx force:auth:jwt:grant --clientid=${{secrets.CONSUMER_KEY}} --username=${{secrets.USERNAME}} --jwtkeyfile assets/server.key --setdefaultdevhubusername --setalias=OW_DevPoc
-          echo "$CONSUMER_KEY"
-          echo "$USERNAME"
+          echo "$env:CONSUMER_KEY"
+          echo "$env:USERNAME"
           
       - name: Branches Involved
         env:
