--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -29,12 +29,9 @@ jobs:
           tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
           ./sfdx-cli/install
           
-      # Authorize ouserlves, the server key was decrypted by the previous step
-      - name: 'Authorize'
-        run: |
-          sfdx force:auth:jwt:grant --clientid=3MVG9od6vNol.eBgenpD7BzVd1JXWRRzrOT.rgigZgmheNehLcwz0TGRaV_eTix.zdGYwMkcJP0LAgcaowvO9 --username=filipa.martins@prod.oneweb.salesforce.devpoc --jwtkeyfile assets/server.key --setdefaultdevhubusername --setalias=OW_DevPoc
-          echo "$env:CONSUMER_KEY"
-          echo "$env:USERNAME"
+      - uses: sfdx-actions/setup-sfdx@v1
+        with:
+          sfdx-auth-url: ${{ secrets.AUTH_SECRET }}
           
       - name: Branches Involved
         env:
