--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev.yml
@@ -75,4 +75,4 @@ jobs:
         run: sfdx force:source:convert --manifest=changed-sources/package/package.xml --outputdir=convert
 
       - name: Run Tests and Deploy
-        run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -w30
+        run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -u ${{secrets.USERNAME}} -w30
