--- a/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
+++ b/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
@@ -29,6 +29,10 @@ jobs:
           mkdir sfdx-cli
           tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
           ./sfdx-cli/install
+
+      # Run the open ssl tool, decrypt the encrypted key and output a server key
+      - name: 'Decrypt file'
+        run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out server.key -base64 -k ${{secrets.DECRYPTION_KEY}} -iv ${{secrets.DECRYPTION_IV}}    
           
       # Authorize ouserlves, the server key was decrypted by the previous step
       - name: 'Authorize'
