--- a/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
+++ b/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
@@ -36,7 +36,7 @@ jobs:
           
       # Authorize ouserlves, the server key was decrypted by the previous step
       - name: 'Authorize'
-        run: sfdx force:auth:jwt:grant --clientid=${{secrets.CONSUMER_KEY}} --username=${{secrets.USERNAME}} --jwtkeyfile assets/server.key --setdefaultdevhubusername --setalias=OW_DevPoc -r https://test.salesforce.com
+        run: sfdx force:auth:jwt:grant --clientid=${{secrets.CONSUMER_KEY}} --username=${{secrets.USERNAME}} --jwtkeyfile server.key --setdefaultdevhubusername --setalias=OW_DevPoc -r https://test.salesforce.com
 
       - name: Branches Involved
         env:
