--- a/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
+++ b/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
@@ -79,7 +79,7 @@ jobs:
           
       - uses: actions/upload-artifact@v2
         with:
-          name: package deployed by ${{ github.actor }} ${{ steps.time.outputs.time }}
+          name: AH package deployed by ${{ github.actor }} ${{ steps.time.outputs.time }}
           path: changed-sources/    
           
       - name: Convert Metadata
