--- a/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
+++ b/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Run the open ssl tool, decrypt the encrypted key and output a server key
       - name: 'Decrypt file'
-        run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out server.key -base64 -k ${{secrets.DECRYPTION_KEY}} -iv ${{secrets.DECRYPTION_IV}}    
+        run: openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out server.key -base64 -K ${{secrets.DECRYPTION_KEY}} -iv ${{secrets.DECRYPTION_IV}}   
           
       # Authorize ouserlves, the server key was decrypted by the previous step
       - name: 'Authorize'
