--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev_DevPoc.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev_DevPoc.yml
@@ -72,7 +72,7 @@ jobs:
 
       - uses: sfdx-actions/setup-pmd@v1
       - name: run-pmd
-        run: pmd -d ./force-app/main/default/classes -R pmd_rules.xml -f text    
+        run: pmd -d ./force-app/main/default/classes -R ./pmd_rules.xml -f text    
           
       - uses: actions/upload-artifact@v2
         with:
