--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev_DevPoc.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev_DevPoc.yml
@@ -83,4 +83,5 @@ jobs:
         run: sfdx force:source:convert --manifest=changed-sources/package/package.xml --outputdir=convert
 
       - name: Run Tests and Deploy
-        run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -u ${{secrets.USERNAME}} -w30
+         # run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -u ${{secrets.USERNAME}} -w30
+         run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -l RunSpecifiedTests -r CreateOppTest -u ${{secrets.USERNAME}} -w30
