--- a/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev_DevPoc.yml
+++ b/.github/workflows/Check_PullReq_From_SubBranch_Into_Dev_DevPoc.yml
@@ -84,4 +84,4 @@ jobs:
 
       # run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -u ${{secrets.USERNAME}} -w30  
       - name: Run Tests and Deploy
-         run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -l RunSpecifiedTests -r CreateOppTest -u ${{secrets.USERNAME}} -w30
+         run: sfdx force:mdapi:deploy --deploydir=convert --checkonly -u ${{secrets.USERNAME}} --testlevel RunSpecifiedTests --runtests CreateOppTest -w30
