--- a/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
+++ b/.github/workflows/DeployPackage_From_MainBranch_Into_DevPoc.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           echo $TIME    
             
-      # sudo npm install sfdx-git-delta@latest -g  
+      # install delta  
       - name: Install App and Create Delta
         run: |
           sudo npm install sfdx-git-delta@latest -g
